Fets uns exemples
Ara tocarà començar a fer simulacions.
Però abans, poder llegir correctament els fitxers és d'interes.

--- a/Execució/LlegirExecutable/Makefile
+++ b/Execució/LlegirExecutable/Makefile
@@ -1,2 +1,2 @@
 proves: proves.c llegir-fitxer.c
-	gcc proves.c llegir-fitxer.c -Wall -g -std=c11 -o proves
+	gcc proves.c llegir-fitxer.c analitzador-sintactic.c -Wall -g -std=c11 -o proves
