Continuant el switch

--- a/Execució/Makefile
+++ b/Execució/Makefile
@@ -1,8 +1,8 @@
 executor.o: executor.c executor.h ../Util/vector.h
 	gcc executor.c -Wall -g -c
 
-h: definicio.h
-definicio.h: definicio.h.gch
+h: definicio.h.gch
+definicio.h.gch: definicio.h
 	gcc definicio.h -Wall
 clean:
 	rm executor.o
