Intentant poder fer el 1er executable.

--- a/Execució/Makefile
+++ b/Execució/Makefile
@@ -1,5 +1,7 @@
-executor.o: executor.c executor.h ../Util/vector.h
-	gcc executor.c -Wall -g -c
+CFLAGS=-Wall -g
+
+executor.o: executor.c executor.h ../Util/vector.h Makefile
+	gcc executor.c $(CFLAGS) -c
 
 h: definicio.h.gch
 definicio.h.gch: definicio.h
