--- a/Util/Makefile
+++ b/Util/Makefile
@@ -1,3 +1,8 @@
+CFLAGS=-Wall -g
+
+vector.o: vector.c  vector.h
+	gcc vector.c $(CFLAGS) -c
+
 test: test.exe
 
 test.exe: test_memoria_dinamica.c vector.c vector.h
