--- a/Inicialitzadors/Makefile
+++ b/Inicialitzadors/Makefile
@@ -1,4 +1,6 @@
 CFLAGS=-Wall -g
 
-inicialitzador_C.o: inicialitzador_C.c inicialitzador_C.h
-	gcc inicialitzador_C.c $(CFLAGS) -c
+NOM=inicialitzador_C
+
+../Bin/$(NOM).o: $(NOM).c $(NOM).h Makefile
+	gcc $(NOM).c $(CFLAGS) -c -o ../Bin/$(NOM).o
