Primer executable Funcional!!
Toca perfilar molt.
Sobretot perquè encara no està definit el retorn.
Però ja poc queda perquè el compilador pugui funcionar adequadament.

--- a/Execució/Makefile
+++ b/Execució/Makefile
@@ -2,5 +2,5 @@ CFLAGS=-Wall -g
 
 NOM=executor
 
-../Bin/$(NOM).o: $(NOM).c $(NOM).h Makefile
+../Bin/$(NOM).o: $(NOM).c $(NOM).h Makefile definicio.h
 	gcc $(NOM).c $(CFLAGS) -c -o ../Bin/$(NOM).o
